StyleSheet/style.css
:root {
  --primary-font: "Nunito", sans-serif;
  --secodary-font: "Princess Sofia", cursive, sans-serif;
  --primary: #e4c59b;
  --primary-hover: #cf964b;
  --primary-light: #ffe9e0;
  --primary-dark: #e5aa6f;
  --secondary: #ac8f68;
  --secondary-hover: #ac8f68cb;
  --secondary-dark: #ae735d;
  --brown: #681f2e;
  --light-gray: #efdcc33a;
  --black: black;
  --white: #fff;
  font-size: 16px;
  padding: 0;
  margin: 0;
}

*,
::before,
::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  box-sizing: inherit;
  color: black;
  font-family: var(--primary-font);
  padding: 0;
  margin: 0;
  background: var(--white);
}

.flex {
  display: flex;
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.direction-to-column {
  flex-direction: column;
}

.grid {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
}

.meduim-icons {
  width: 1.2rem;
}

.larg-icons {
  width: 2rem;
}

h1,
h2,
h3,
h5,
a,
p {
  font-family: var(--primary-font);
}

a {
  text-decoration: none;
  outline: none;
  color: inherit;
}

ul li {
  list-style: none;
}

.btn {
  font-size: 1rem;
  padding: 0.5rem 1.8rem;
  border: none;
  border-radius: 1.5rem;
  background: var(--secondary);
}
.btn:hover,
.btn:active {
  color: var(--white);
  background: var(--secondary-hover);
}

.product-price {
  color: var(--secondary-dark);
}

.product-name {
  color: var(--primary-hover);
}

.top-navigation {
  padding-bottom: 0.5rem;
  box-shadow: 0 0 5px 0.5px rgba(0, 0, 0, 0.46);
  width: 100%;
  background: var(--white);
}

.logo-container {
  margin-right: 1rem;
}

.logo-container .logo__item {
  font-family: var(--secodary-font);
  color: var(--primary);
  font-size: 2rem;
}

.page__link {
  text-align: center;
}

.page__link__top {
  display: none;
  padding: 0 1rem;
}

.page__link:hover {
  filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg)
    brightness(104%) contrast(97%);

  transform: scale(1.1);
  transition-duration: 0.4s;
}

.active {
  filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg)
    brightness(104%) contrast(97%);
}

.search-container {
  margin: 0 1.5rem;
}

input {
  font-family: inherit;
  font-size: 0.7rem;
}

input[name="search"] {
  width: 100%;
  height: 100%;
  padding: 0.5rem;
  outline: none;
  border: 0.1rem var(--primary) solid;
  border-radius: 1.5rem 0 0 1.5rem;
  background: var(--light-gray);
}

input[name="search"]:focus {
  border: 0.1rem var(--primary-hover) solid;
}

input[name="search-submit"] {
  padding: 0.5rem;
  background: var(--primary);
  border-radius: 0 1.5rem 1.5rem 0;
  border: 0.1rem var(--primary) solid;
  cursor: pointer;
}

input[name="search-submit"]:hover,
input[name="search-submit"]:focus {
  border: 0.1rem var(--primary-hover) solid;
}

.top-nav-catigories {
  display: none;
  width: 100%;
  justify-content: center;
}

.top-nav-catigories ul il {
  margin: 0 2rem;
}

.bottom-navigation {
  position: fixed;
  bottom: 0;
  padding: 0.5rem 1rem;
  width: 100%;
  justify-content: space-between;
  flex-wrap: wrap;
  background: var(--white);
  box-shadow: 0 0 5px 0.5px rgba(0, 0, 0, 0.46);
}

.hero-section {
  justify-content: space-evenly;
  position: relative;
  width: 100%;
  height: 40vh;
  overflow: hidden;
  background: var(--primary);
}

.hero-section img {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: auto;
}

.hero-section h1 {
  font-size: 1.5rem;
  color: var(--black);
  text-shadow: 5px 5px 50px black;
  text-align: center;
  animation-name: head;
  animation-duration: 2s;
}

.product-container-header {
  justify-content: space-between;
  padding: 2.5rem 0;
}

.product-container-header h1 {
  width: fit-content;
  font-size: 1.2rem;
  text-align: center;
  color: var(--brown);
}

.separater-line {
  border-top: 2px var(--primary) solid;
  width: 30%;
}

.products-container {
  width: 100%;
  padding: 0.5rem 1.5rem;
  margin: 2rem 0;
}

.product-card {
  height: 330px;
  flex-direction: column;
  overflow: hidden;
}

.product-image-container {
  width: 100%;
  height: 230px;
}

.product-image-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.product-name {
  white-space: nowrap;
  overflow: hidden;
  width: 100%;
  text-overflow: ellipsis;
}

.product-image-container img:hover {
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
}

.banner {
  width: 100%;
}

.banner img {
  width: 100%;
  height: 240px;
}

.product-gallery {
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-auto-rows: 300px;
  gap: 1px;
  width: 100%;
  padding: 0 1rem;
}

.gl-img-container {
  position: relative;
  background: rgba(0, 0, 0, 0.8);
  width: 100%;
}

.gl-img-container img {
  position: relative;
  z-index: -1;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.gl-img-container h1 {
  font-size: 2.5rem;
  text-transform: uppercase;
  color: var(--white);
  width: 100%;
  text-align: center;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

